tests/errors/type_mismatch_int_string.wyn
// Test: Type mismatch should be caught by Wyn, not C compiler
fn main() -> int {
    var x: int = "hello"
    return 0
}
